Table roles {
  id int [pk, increment]
  name varchar(50) [not null, unique]
  description varchar(255)
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
}

Table users {
  id int [pk, increment]
  role_id int [not null, ref: > roles.id, delete: restrict]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  email varchar(150) [not null, unique]
  password varchar(255) [not null]
  phone varchar(20)
  avatar varchar(255)
  status enum('Active', 'Inactive') [default: 'Active']
  last_login datetime
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
}

Table companies {
  id int [pk, increment]
  name varchar(255) [not null]
  industry varchar(100)
  email varchar(150)
  phone varchar(50)
  website varchar(255)
  address text
  city varchar(100)
  country varchar(100)
  created_by int [not null, ref: > users.id]
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
}

Table customers {
  id int [pk, increment]
  company_id int [not null, ref: > companies.id, delete: cascade]
  assigned_to int [ref: > users.id]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  email varchar(150) [unique]
  phone varchar(50)
  status varchar(50) [default: 'Active']
  address varchar(255)
  notes text
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]

  indexes {
    (email)
  }
}

Table contacts {
  id int [pk, increment]
  company_id int [not null, ref: > companies.id, delete: cascade]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  email varchar(150)
  phone varchar(50)
  position varchar(100)
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
}

Table leads {
  id int [pk, increment]
  company_id int [not null, ref: > companies.id, delete: cascade]
  assigned_to int [ref: > users.id]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  email varchar(150)
  phone varchar(50)
  source varchar(100)
  status enum('New', 'Contacted', 'Qualified', 'Proposal', 'Won', 'Lost') [not null]
  estimated_value decimal(12, 2)
  notes text
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
}

Table categories {
  id int [pk, increment]
  name varchar(100) [not null, unique]
  description text
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
}

Table products {
  id int [pk, increment]
  category_id int [ref: > categories.id]
  name varchar(150) [not null]
  sku varchar(50) [not null, unique]
  barcode varchar(100) [unique]
  description text
  purchase_price decimal(10, 2) [not null, default: 0]
  selling_price decimal(10, 2) [not null, default: 0]
  image varchar(255)
  status enum('Active', 'Inactive') [not null]
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]

  indexes {
    (sku)
  }
}

Table inventory {
  id int [pk, increment]
  product_id int [not null, ref: > products.id, delete: cascade, unique]
  quantity int [not null, default: 0]
  minimum_stock int [not null, default: 0]
  warehouse varchar(100)
  updated_at datetime [default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
}

Table orders {
  id int [pk, increment]
  order_number varchar(50) [not null, unique]
  customer_id int [not null, ref: > customers.id]
  created_by int [not null, ref: > users.id]
  order_date datetime [not null]
  total_amount decimal(12, 2) [not null]
  status enum('Pending', 'Confirmed', 'Processing', 'Completed', 'Cancelled') [not null]
  notes text
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]

  indexes {
    (order_number)
  }
}

Table order_items {
  id int [pk, increment]
  order_id int [not null, ref: > orders.id, delete: cascade]
  product_id int [not null, ref: > products.id]
  quantity int [not null]
  unit_price decimal(10, 2) [not null]
  subtotal decimal(12, 2) [not null]
}

Table invoices {
  id int [pk, increment]
  order_id int [not null, ref: > orders.id]
  issued_by int [not null, ref: > users.id]
  invoice_number varchar(100) [not null, unique]
  invoice_date date [not null]
  due_date date [not null]
  total_amount decimal(12, 2) [not null]
  payment_status enum('Unpaid', 'Partially Paid', 'Paid') [not null]
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]

  indexes {
    (invoice_number)
  }
}

Table payments {
  id int [pk, increment]
  invoice_id int [not null, ref: > invoices.id, delete: cascade]
  amount decimal(12, 2) [not null]
  payment_method enum('Cash', 'Credit Card', 'Bank Transfer') [not null]
  payment_date datetime [not null]
  transaction_id varchar(150)
  reference varchar(150)
  status enum('Pending', 'Completed', 'Failed') [not null]
  created_at datetime [default: `CURRENT_TIMESTAMP`]

  indexes {
    (invoice_id)
  }
}

Table tasks {
  id int [pk, increment]
  assigned_to int [ref: > users.id]
  created_by int [ref: > users.id]
  title varchar(255) [not null]
  description text
  priority enum('Low', 'Medium', 'High') [not null]
  status enum('Pending', 'In Progress', 'Completed') [not null]
  due_date date
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]

  indexes {
    (assigned_to)
  }
}

Table notifications {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  title varchar(255) [not null]
  message text [not null]
  type enum('Info', 'Success', 'Warning', 'Error') [not null, default: 'Info']
  is_read boolean [default: false]
  created_at datetime [default: `CURRENT_TIMESTAMP`]

  indexes {
    (user_id)
  }
}

Table activities {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  action varchar(150) [not null]
  entity_type enum('Customer', 'Lead', 'Order', 'Invoice', 'Product', 'Task') [not null]
  entity_id int
  description text
  created_at datetime [default: `CURRENT_TIMESTAMP`]

  indexes {
    (user_id)
  }
}

Table settings {
  id int [pk, increment]
  company_name varchar(255)
  company_email varchar(150)
  company_phone varchar(50)
  company_address text
  currency varchar(10)
  timezone varchar(100)
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
}

Ref: users.role_id > roles.id
Ref: companies.created_by > users.id
Ref: customers.company_id > companies.id
Ref: customers.assigned_to > users.id
Ref: contacts.company_id > companies.id
Ref: leads.company_id > companies.id
Ref: leads.assigned_to > users.id
Ref: products.category_id > categories.id
Ref: inventory.product_id > products.id
Ref: orders.customer_id > customers.id
Ref: orders.created_by > users.id
Ref: order_items.order_id > orders.id
Ref: order_items.product_id > products.id
Ref: invoices.order_id > orders.id
Ref: payments.invoice_id > invoices.id
Ref: tasks.assigned_to > users.id
Ref: notifications.user_id > users.id
Ref: activities.user_id > users.id
